package awesomepackage;
syntax = "proto3";

message RegisterResponse {
	string imei = 1;
	string dyId = 2;
	string dypassword = 3;
	string mqttTcpEndpoint = 4;
	string mqttSslEndpoint = 5;
	string mqttWssEndpoint = 6;
	string mqttUsername = 7;
	string mqttKey = 8;
}

message RecoProfileRequest {
    int64 batchId = 1;
    string deviceId = 2;
    string variety = 9;
    string barn_airflow_direction = 10;
    string barn_wall_texture = 11;
    double load_weather_temperature = 12;
    double load_top_weight = 13;
    double load_weather_humidity = 14;
    double load_middle_weight = 15;
    double load_bottom_weight = 16;
    string load_tool = 17;
    int64 loading_tool_count = 18;
    string load_tool_weight = 19;
    string load_quality = 20;
    double load_maturity_lv_0_percentage = 21;
    double load_maturity_lv_1_percentage = 22;
    double load_maturity_lv_2_percentage = 23;
    double load_maturity_lv_3_percentage = 24;
    double load_maturity_lv_4_percentage = 25;
}

message ProfileItem {
    double targetDryBulbTemp = 1;
    double targetWetBulbTemp = 2;
    int64 minutes = 3;
}

message Profile {
    repeated ProfileItem items = 1;
}

message ScoredProfile {
	double distance = 1;
	double score = 2;
	Profile series = 3;
}

message BatchProfile {
    int64 batchId = 1;
    string deviceId = 2;
    Profile profile = 3;
}

message BatchRating {
    string rating = 1;
    double weight = 2;
}

message BatchDetail {
    int64 batchId = 1;
    string deviceId = 2;
    int32 curingDeviceBatchOrder = 3;
    repeated BatchRating ratings = 4;
    int64 start_time = 5;
    int64 end_time = 6;
    double after_top_weight = 7;
    double after_middle_weight = 8;
    double after_bottom_weight = 9;
    string variety = 10;
    string barn_airflow_direction = 11;
    string barn_wall_texture = 12;
    double load_weather_temperature = 13;
    double load_top_weight = 14;
    double load_weather_humidity = 15;
    double load_middle_weight = 16;
    double load_bottom_weight = 17;
    string load_tool = 18;
    string load_tool_count = 19;
    string load_tool_weight = 20;
    string load_quality = 21;
    double load_maturity_lv_0_percentage = 22;
    double load_maturity_lv_1_percentage = 23;
    double load_maturity_lv_2_percentage = 24;
    double load_maturity_lv_3_percentage = 25;
    double load_maturity_lv_4_percentage = 26;
    Profile profile =  27;
    repeated ProfileUpdate profileUpdate = 28;
}

message ProfileUpdate {
    string type =  1;
    int32 position =  2;
    double value =  3;
    int64 time =  4;
}

message BatchSummary {
    int64 batchId = 1;
    string deviceId = 2;
    int64 start_time = 3;
    int64 end_time = 4;
}

message ResumeResponse {
	int32 batchId = 1;
	Profile profile = 2;
	int32 stage = 3;
	int32 remainMinutes = 4;
}

message AlertDetail {
    int64 alertId = 1;
    string deviceId = 2;
    string type = 3;
    int64 triggerTime = 4;
    int64 resolveTime = 5;
    int64 lastAlertTime = 6;
    string state = 7;
    string detail = 8;
}

message ConfigTemperaturePair {
	double start_temperature = 1;
	double end_temperature = 2;
}

message ConfigCurve {
	repeated ConfigTemperaturePair dry_list = 1;
	repeated ConfigTemperaturePair wet_list = 2;
	repeated int32 during_list = 3;
}

message ConfigTobaccoType {
	string name = 1;
	int32 id = 2;
}

message ConfigTobaccoQuality {
	string name = 1;
	int32 id = 2;
}

message ConfigAlarmThreshold {
	double max_temperature = 1;
	double min_temperature = 2;
	int32 alarm_checking_period = 3;
	int32 dry_temperature_alarm_period = 4;
	int32 dry_temperature_alarm_limit = 5;
	int32 dry_temperature_alarm_period2 = 6;
	int32 dry_temperature_alarm_limit2 = 7;
	int32 wet_temperature_alarm_period = 8;
	int32 wet_temperature_alarm_limit = 9;
}

message ConfigGPS {
	double longitude = 1;
	double altitude = 2;
}

message ConfigBaseSetting {
	ConfigGPS GPSInfo = 1;
	string airflow_pattern = 2;
	int32 inner_height = 3;
	int32 wall_material = 4;
	string controller_name = 5;
	string location_name = 6;
}

message Config {
	int32 update_tag = 1;
	repeated ConfigCurve default_curve = 2;
	repeated ConfigTobaccoType tobacco_type = 3;
	repeated ConfigTobaccoQuality quality_level = 4;
	ConfigAlarmThreshold alarm_threshold = 5;
	ConfigBaseSetting base_setting = 6;
}

message UpdateRequest {
	string deviceId = 1;
	string app_version = 2;
}